# xilinx-language-server

./: .gitignore  .pre-commit-config.yaml  README.md  addon-info.json  flake.nix  pyproject.toml
.github/workflows/: main.yml  version.yml
autoload/: xilinx.vim
doc/: xilinx.txt
docs/: conf.py
docs/api/: xilinx-language-server.md
docs/resources/: configure.md  install.md
ftdetect/: xilinx.vim
ftplugin/: xsct.vim
scripts/: generate-expect.json.py  git-commit.sh  update-vim-plugin.vim  update-vivado-keywords.tcl  update-xsct-keywords.tcl  update.sh  xilinx.py  xilinx.tcl
src/xilinx_language_server/: __init__.py  __main__.py  server.py
src/xilinx_language_server/assets/json/: vivado.json
syntax/: xdc.vim  xsct.vim
tests/: server_test.py
