[project]
name = "xilinx-language-server"
version = "0.0.6"
description = "xilinx language server"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [{ name = "Wu, Zhenyu", email = "wuzhenyu@ustc.edu" }]
dependencies = [
    "pygls>=2.1.1",
]

[project.urls]
"Bug Report" = "https://github.com/Freed-Wu/xilinx-language-server/issues"
Download = "https://github.com/Freed-Wu/xilinx-language-server/releases"
Homepage = "https://xilinx-language-server.readthedocs.io"
Source = "https://github.com/Freed-Wu/xilinx-language-server"

[project.scripts]
xilinx-language-server = "xilinx_language_server.__main__:main"

[build-system]
requires = ["uv_build<0.12"]
build-backend = "uv_build"

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "\\s*import tomli as tomllib",
]

[tool.doq]
template_path = "templates"

[tool.mdformat]
number = true

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
ignore = ["D205", "D400"]
preview = true

[tool.ruff.format]
docstring-code-format = true
preview = true
